# bat_img_rs

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml  rust.yml
python/: README.md  README_PYPI.md  build_wheels.py  pyproject.toml
python/bat_img_cli/: __init__.py
src/: cli.rs  error.rs  exif.rs  heic.rs  lib.rs  main.rs  pipeline.rs  processor.rs
tests/: test_exif.rs  test_pipeline.rs  test_processor.rs
