[package]
name = "bat_img_rs"
version = "0.1.0"
edition = "2024"
authors = ["John Liu"]
description = "A fast, multithreaded batch image processing CLI tool"
license = "MIT"
readme = "README.md"

[[bin]]
name = "bat_img_rs"
path = "src/main.rs"

[lib]
name = "bat_img_rs"
path = "src/lib.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "color"] }

# Image processing (resize, border, format conversion)
image = { version = "0.25", features = ["jpeg", "png", "webp", "tiff", "gif"] }

# HEIC/HEIF decoding via libheif (requires libheif + libde265 system libraries)
#libheif-rs = "0.22"
libheif-rs = { version = "2.7", features = ["image"] }

# EXIF metadata manipulation (strip GPS, read metadata)
kamadak-exif = "0.6"

# Parallel processing
rayon = "1.10"

# Progress bar
indicatif = { version = "0.17", features = ["rayon"] }

# Colored terminal output
colored = "3"

# Glob pattern matching for input files
glob = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Walkdir for recursive directory traversal
walkdir = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"     # removes unwinding machinery (~200 KB on some builds)

# Extra size profile: `cargo build --profile release-small`
# Produces the smallest possible binary at some speed cost.
[profile.release-small]
inherits = "release"
opt-level = "z"     # optimise for size (vs speed)
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
