[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bat_img"
version = "1.0.0"
description = "Fast multithreaded batch image processor (HEIC, JPEG, PNG, WebP, …)"
readme = "README_PYPI.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["image", "batch", "heic", "resize", "exif", "cli"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Graphics",
    "Environment :: Console",
]

[project.scripts]
bat_img = "bat_img_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bat_img_cli*"]

[tool.setuptools.package-data]
bat_img_cli = ["bin/*"]
