[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "bat_img"
version = "1.0.3"
description = "Fast multithreaded batch image processing CLI tool (HEIC, JPEG, PNG, WebP, …)"
readme = "README.md"
authors = [{ name = "John Liu", email = "rim2rim@gmail.com" }]
license = "MIT"
license-files = ["../LICENSE"]
keywords = ["strip-gps", "image", "batch", "heic", "resize", "exif", "cli", "cli-tool", "image-processing", "batch-processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
requires-python = ">=3.12"

[project.scripts]
bat_img = "bat_img_cli:main"

[project.urls]
Download = "https://pypi.org/project/bat-img/"
Homepage = "https://github.com/john-liu2/bat_img_rs"

[tool.hatch.build.targets.sdist]
# Include only the Python source files in the sdist.
# The binary is NOT included. Whoever install from sdist must build Rust themselves.
include = [
    "bat_img_cli*",
    "pyproject.toml",
    "README.md",
    "../LICENSE",
]

[tool.hatch.build.targets.wheel]
# Wheels are assembled by build_wheels.py, not hatch.
# This section is kept for completeness / local editable installs.
packages = ["bat_img_cli"]
artifacts = ["bat_img_cli/bin/*"]
